# trgt-denovo

./: Cargo.toml  LICENSE-THIRDPARTY.json  LICENSE.md  README.md  build.rs
docs/: cli.md  example.md  interpretation.md  output.md
scripts/python/: trio_analysis.ipynb
src/: aligner.rs  allele.rs  cli.rs  commands.rs  denovo.rs  handles.rs  lib.rs  locus.rs  main.rs  math.rs  model.rs  read.rs  readers.rs  region.rs  snp.rs  stats.rs  util.rs  wfa2.rs
src/commands/: duo.rs  shared.rs  trio.rs
src/duo/: allele.rs  denovo.rs  mod.rs
src/trio/: allele.rs  denovo.rs
