[package]
name = "trgt-denovo"
version = "0.2.2"
authors = ["Tom Mokveld", "Egor Dolzhenko"]
description = """
trgt-denovo is a CLI tool for targeted de novo tandem repeat calling from long-read HiFI sequencing data in family trios or duos.
"""
edition = "2021"
build = "build.rs"

# TODO: migrate to vergen 9
[build-dependencies]
vergen = { version = "8.0.0", features = ["git", "gitcl"] }

[[bin]]
bench = false
path = "src/main.rs"
name = "trgt-denovo"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wfa2-sys = { version = "0.1.0", git = "https://github.com/ctsa/rust-wfa2.git", rev = "6e1d1dd" }
clap = { version = "4.0", features = ["suggestions", "derive"] }
itertools = "0.11"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
csv = "1.3"
ndarray = "0.15"
# flate2 = { version = "1.0", default-features = false, features = ["zlib-ng"] }  # Options: zlib-ng, zlib, zlib-ng-compat
noodles = { version = "0.56", features = ["vcf", "fasta", "core", "bam", "sam", "bgzf", "bed"] }
once_cell = "1.18"
rayon = "1.8"
crossbeam-channel = "0.5"
anyhow = "1.0"